# fx-agent-proj

./: .coverage  README.md  app.py  fx_cache.json  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
.github/workflows/: ci.yml
fx/: analysis.py
logs/: agent_events.jsonl
src/analysis/: __init__.py  data.py  fx.py  risk.py  sim.py
src/application/: orchestrator.py
src/application/services/: evaluation_service.py  fx_service.py
src/config/: settings.py
src/domain/: __init__.py  models.py
src/infrastructure/llm/: calc.py  client.py
src/infrastructure/logging/: logger.py
src/infrastructure/tools/: definitions.py  executors.py
src/multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: pricing.py
tests/integration/: test_orchestrator.py
tests/unit/: test_calc.py  test_fx.py  test_pricing.py  test_risk.py
