[project]
name = "multi-agent"
version = "0.1.0"
description = "Production-grade extensible autonomous FX + multi-tool AI agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "mistralai>=0.1.0",
    "python-dotenv>=1.0.0",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]
